--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <title>Final project title goes here</title>
+    <title>Winning Strategy</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -15,13 +15,30 @@
   </head>
   <body>
     <nav class="navbar navbar-light bg-light">
-      <span class="navbar-brand mb-0 h1">Name of your project here</span>
+      <span class="navbar-brand mb-0 h1">Winning Strategy</span>
     </nav>
 
 
     <div class="container">
-      <h1>Hello, world! This is what I learned this semester.</h1>
-      <p>Here's my story, and hopefully I can you make this basic template look a lot better too.</p>
+      
+     <h1>Last 10 Weeks of the 2016 United States Presidential Campaign Trail</h1>
+  <p>The 2016 presidential election was an anomaly unlike any other, an unexplainable phenomenon for citizens, journalists, political scientists, and even politicians. Republican nominee Donald Trump ended the night with 304 electoral votes, winning states considered Democratic strongholds for years-Michigan, Wisconsin, and Pennsylvania-while also securing the majority of votes in traditional swing states like Ohio and Florida.</p>
+
+  <img src="images/Election-Maps-(Legend).jpg"/>
+  <img src="images/Election-Maps-(UnitedStates).jpg"/>
+  <p>Soon after his victory, analysts attributed his win to the unconventional campaign strategy adopted by his campaign in the 10 weeks leading up to election day. 29 stops in the Rust Belt, eight in Ohio alone, outworking and outperforming Hillary Clinton throughout the United States. It was a backbreaking pace to the finish, with a confluence of setbacks, that ultimately delivered him the final tally thought to be out of reach. </p>
+  
+  <img src="images/Election-Maps-(RustBelt).jpg?c=12"/>
+  <p>Winning the Rust Belt was key to Trump’s campaign. In June, he announced that his people would focus their “energy” on fifteen states where he intended to “play heavy”: Ohio, Michigan, Minnesota, Wisconsin, Iowa, and Pennsylvania to name a few. All states President Obama won handily in 2008 and 2012, places he said were being left behind, where jobs had been outsourced and Democrats were being voted out. He tallied 16 stops in those states in the months of September and October, three in a day in Pennsylvania. It is safe to say his bet paid off. By 2 a.m. on election night, major outlets projected Trump the victor in Ohio, Pennsylvania, Iowa, and Michigan soon followed, while others networks criticized Clinton for her lack of effort in the region. </p>
+
+  <img src="images/Election-Maps-(Ohio).jpg?c=10"/>
+  <p>That old saying was proven right again: “As Ohio goes, so goes the nation.” With eight stops in the Buckeye State during the final leg of the campaign, Donald Trump was intent on turning rural counties red. Montgomery Country, where Barack Obama defeated Mitt Romney in 2012, was one of eight counties he flipped in the state. There he received 123,909 votes to Clinton’s 122,016, and that marginal difference in other counties like Lake, Wood, and Trumbull garnered him the victory in Ohio. Clinton’s eight stops paled in comparison to his, and even the endorsement of NBA superstar LeBron James couldn’t deliver her the nod. </p>
+
+  <P>No other state in the 2016 general election was perhaps more sought after by the candidates than Florida. In prior elections in 2000 and 2004, it along with Ohio was key to George W. Bush’s victory. With resorts in Miami and Palm Beach, Trump made the state’s 29 electoral votes a primary objective in the months of September, October, and November. But it would be a hotly contested battleground where Clinton was determined to walk away victorious. However, her determination was once again met by business mogul’s get-up-and-go mentality. His 16 stops not only outmatched Clinton’s 14, but the final six in the last week of the campaign showed how valuable Floridians votes were to him. </P>
+  
+  <img src="images/Election-Maps-(Florida).jpg"/>
+  
+  <P>When it was all said and done, Donald Trump flipped six states red: Florida, Ohio, Pennsylvania, Wisconsin, Michigan, and Iowa. His plan blossomed even better than he had imagined and the world was left speechless by a collection of “Make America Great Again” hats and posters. Were the 109 stops in the final ten weeks the key to Trump’s victory? Was Hillary’s Rust Belt “blue wall” all make believe? There is probably more than one person, besides the man in the White House, who would say ‘yes.’</P>  
     </div>
 
     <!-- Optional JavaScript -->
