--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
   <p>Winning the Rust Belt was key to Trump’s campaign. In June 2016, the business mogul announced he would focus his energy on fifteen states where he intended to “play heavy”: Ohio, Michigan, Minnesota, Wisconsin, Iowa, and Pennsylvania among them. Places he said Americans had been left behind, states Barack Obama had won handily in 2008 and 2012, and where Democrats were charged with losing touch with ordinary Americans. He tallied 16 stops in those states in the months of September and October, three in one day in Pennsylvania. And his bet paid off. On election night, they fell in his column one by one, and analysts were left speechless, pointing the finger at a befuddled Clinton.</p>
 
   <img src="images/Election-Maps-(Legend).jpg"/> 
+  <img src="images/Election-Maps-(blackkey).jpg"/>
   <img src="images/Election-Maps-(Ohio).jpg?c=10"/>
   <p>In Ohio, that old saying rang true again: “As Ohio goes, so goes the nation.” With eight stops in the Buckeye State during the final leg of the campaign, Trump proved his get-up-and-go mentality would turn the state red. Montgomery Country was one of eight counties he flipped there, receiving 123, 909 votes to Clinton's 122, 016. That marginal difference in Montgomery, Lake, Wood, and Trumbull was a trend he replicated in similar swing counties in Iowa, Wisconsin, Michigan, and Pennsylvania. Clinton’s stops weren't enough, even despite an endorsement from NBA superstar LeBron James. </p>
   
