--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <div class="container">
       
      <h1>Last 10 Weeks Of The 2016 Campaign Trail</h1>
+     <p style="text-align:center">By Daniel Gomez</p>
   <p>The 2016 presidential election was an anomaly unlike any other for journalists, political scientists, and most Americans. Now President Donald Trump talllied 304 electoral votes, winning states considered Democratic strongholds for years while securing the majority of votes in traditional swing states like Ohio and Florida as well. Soon after his victory, analysts attributed his win to the bold campaign strategy adopted by his campaign in the 10 weeks leading up to election day.</p>
 
   <img src="images/Election-Maps-(Legend2).jpg"/>
@@ -43,7 +44,9 @@
   <img src="images/Election-Maps-(Florida).jpg"/>
   <P>No other state in 2016 was perhaps more coveted than Florida. In prior elections, it along with Ohio had been key to previous Republican victories in 2000 and 2004. With resorts in Miami and Palm Beach, Trump was intent on making the state’s 29 electoral votes his for the taking. But it turned into a hotly contested race where Clinton wanted to walk away victorious. Her determination, however, was once again met with Trump's hustle. His 16 stops not only surpassed her 14, but six in the final week showed how valuable the state was to him. </P>
 
-  <P>By the time it was all said and done, Trump had flipped six states from 2012: Florida, Ohio, Pennsylvania, Wisconsin, Michigan, and Iowa. His plan blossomed even better than he could have imagined, and the world was left speechless by a “Make America Great Again” movement that had deeper roots than anyone predicted. Was campaigning in those states the key to victory all along? Today, there is probably more than one person besides the man in the Oval Office who would say 'yes'.</P>  
+  <p>By the time it was all said and done, Trump had flipped six states from 2012: Florida, Ohio, Pennsylvania, Wisconsin, Michigan, and Iowa. His plan blossomed even better than he could have imagined, and the world was left speechless by a “Make America Great Again” movement that had deeper roots than anyone predicted. Was campaigning in those states the key to victory all along? Today, there is probably more than one person besides the man in the Oval Office who would say 'yes'.</p>  
+
+  <p><strong>Sources:</strong> Election result data via <a href="https://github.com/tonmcg/County_Level_Election_Results_12-16">Federal Elections Commission</a>; Campaign Stops via <a href="https://github.com/fivethirtyeight/data/tree/master/presidential-campaign-trail">538</a>.</p>
     </div>
 
     <!-- Optional JavaScript -->
